# Liangent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_CN.md  SECURITY.md  fc_handler.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  sync_to_hub.yml
examples/: sdk_usage.py
liangent/: cli.py  client.py  server.py
liangent/core/: agent.py
liangent/memory/: manager.py  models.py
liangent/tools/: registry.py  sandbox.py  shell_env.py
liangent/tools/builtin/: shell.py
tests/: test_basic.py
