[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liangent"
version = "0.0.18"
description = "A lightweight agent framework"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Liang"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "jinja2",
    "pydantic",
    "pydantic-settings",
    "requests",
    "python-dotenv",
    "openai",
    "socksio"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]


[project.scripts]
liangent = "liangent.cli:main"

[tool.setuptools.package-data]
liangent = ["env_template", "agents_md_template", "prompts/*.j2"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E722",  # Bare except (acceptable in parsing code)
    "W291",  # Trailing whitespace
    "W293",  # Blank line contains whitespace
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]  # Allow imports not at top in examples
"tests/*" = ["F401"]     # Allow unused imports in tests

